  - V Grad (dither)
  - H Grad (dither)
  - R Grad (dither, Center)
- Add Tool and Ink selector


2023.04.05
- SelectColor tool hinting fixed, now it allows showing hints from other controls.
- ColorSelector added to PaletteEditor.
- Messages are forwarded only to visible controls.
- Right clicking on ColorSelector in PaletteEditor allows you to pick color from
  the image or from the palette.

2023.04.04
- Under the hood: MKMouse2 changes and follow ups.

2023.03.29
- UndoSystem is distilled to a base class and added ImageUndoSystem and ColorUndoSystem.
  The latter is not saved in system state yet.
- File format change in system state. This one breaks the compatibility with older
  saves. (Added Version so it won't do it in the future.)
- ColorUndoSystem is included in the system state save.
- After changing palette color with sliders it is possible to undo/redo the change.
- When leaving slider with button down, it goes back to original position.

2023.03.28
- Moving mouse over the palette in the PaletteEditor show color hint.
- When you are in the PaletteEditor, color hint only visible over the DrawArea or
  over the palette colors.
- Releasing RMB after panning no longer exits PaletteEditor.
- Added mouse panning enum, instead of numbers.
- Added Undo/Redo buttons to PaletteEditor. (Not working yet.)

2023.03.24
- Added a new, modern font for the modern look. (Drawn entirely with this program!)
- InfoBar now appears above the current panel (Controls or PaletteEditor),
  and on the top of the window when no panel is visible.
- GetCEL and PutCEL now shows coordinates in first state too.
- Added degree symbol to the rotate dialog.
- Submenus can have hints.

2023.03.23
- Code cleanup in MainUnit.
- When you release CEL, all menus requiring active CEL are disabled.
- When you get or load a CEL, all menus requiring active CEL are enabled.
- Under the hood: MouseObjects only calls draw for visible objects.
- CEL/Put works.