@@ -11,14 +11,13 @@
         <CursorPos X="25" Y="11"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMainUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="130"/>
-        <CursorPos X="71" Y="139"/>
+        <TopLine Value="160"/>
+        <CursorPos X="19" Y="192"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
@@ -26,9 +25,9 @@
         <Filename Value="BDPSharedUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="7"/>
-        <TopLine Value="28"/>
-        <CursorPos X="26" Y="44"/>
-        <FoldState Value=" T3l70W4 pk6l50P1 PKR0{"/>
+        <TopLine Value="164"/>
+        <CursorPos X="50" Y="260"/>
+        <FoldState Value=" T3l70W11112 PjGlX0G"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
@@ -81,7 +80,6 @@
         <CursorPos X="22" Y="211"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSettingsUnit.pas"/>
@@ -112,14 +110,12 @@
       <Unit>
         <Filename Value="BDPToolsUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="1211"/>
-        <CursorPos X="3" Y="1248"/>
-        <FoldState Value=" T7DAJA21 PidkVH T3lH04B pj6jc036]94jN035]9DiT2B7 pkRjZ2N5]9DkL2R4 pielB063]a0jK056]IYjC0S4511114 Pigld0b"/>
+        <TopLine Value="1268"/>
+        <CursorPos Y="1313"/>
+        <FoldState Value=" T7DAJA21 PidkUH T3lG04B pj6jc036]94jN035]9DiT2B7 pkRjZ2N5]9DkL2R4 pielB063]a0jK056]IYjC0S4411114 PiglV0A"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPInksUnit.pas"/>
@@ -135,7 +131,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="302"/>
         <CursorPos Y="344"/>
-        <UsageCount Value="195"/>
+        <UsageCount Value="197"/>
       </Unit>
       <Unit>
         <Filename Value="BDPKeyMappingUnit.pas"/>
@@ -143,7 +139,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="3"/>
         <CursorPos Y="37"/>
-        <UsageCount Value="188"/>
+        <UsageCount Value="190"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -152,14 +148,14 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="22"/>
         <CursorPos Y="51"/>
-        <UsageCount Value="171"/>
+        <UsageCount Value="173"/>
       </Unit>
       <Unit>
         <Filename Value="BDPColorSelectorUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="6"/>
         <CursorPos X="9" Y="13"/>
-        <UsageCount Value="159"/>
+        <UsageCount Value="161"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -168,22 +164,23 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="356"/>
         <CursorPos Y="430"/>
-        <UsageCount Value="149"/>
+        <UsageCount Value="151"/>
       </Unit>
       <Unit>
         <Filename Value="BDPPaletteEditorUnit.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="197"/>
-        <CursorPos X="53" Y="236"/>
-        <UsageCount Value="122"/>
+        <TopLine Value="44"/>
+        <CursorPos X="59" Y="48"/>
+        <UsageCount Value="124"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSliderUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="114"/>
+        <UsageCount Value="116"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMenuUnit.pas"/>
@@ -191,7 +188,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="233"/>
         <CursorPos Y="254"/>
-        <UsageCount Value="87"/>
+        <UsageCount Value="89"/>
       </Unit>
       <Unit>
         <Filename Value="BDPModalDialogUnit.pas"/>
@@ -300,9 +297,12 @@
       </Unit>
       <Unit>
         <Filename Value="units\Font2Unit.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="52"/>
-        <UsageCount Value="10"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="273"/>
+        <CursorPos X="26" Y="282"/>
+        <UsageCount Value="11"/>
+        <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\MyZStreamUnit.pas"/>
@@ -479,7 +479,7 @@
         <UsageCount Value="10"/>
       </Unit>
     </Units>
-    <JumpHistory HistoryIndex="12">
+    <JumpHistory HistoryIndex="18">
       <Position>
         <Filename Value="BDPPaletteEditorUnit.pas"/>
         <Caret Line="230" TopLine="219"/>
@@ -531,6 +531,30 @@
       <Position>
         <Filename Value="BDPToolsUnit.pas"/>
         <Caret Line="152" Column="7" TopLine="135"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1321" TopLine="1271"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="161" TopLine="161"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="155" TopLine="125"/>
+      </Position>
+      <Position>
+        <Filename Value="units\Font2Unit.pas"/>
+        <Caret Line="81" Column="12" TopLine="58"/>
+      </Position>
+      <Position>
+        <Filename Value="units\Font2Unit.pas"/>
+        <Caret Line="175" TopLine="155"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPPaletteEditorUnit.pas"/>
+        <Caret Line="234" TopLine="200"/>
       </Position>
     </JumpHistory>
     <RunParams>
