@@ -1,4 +1,2 @@
-fontbuild2 newfont.bdc bdpfont.png -charset "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789,.-?:_;>*<}{@&#][|\'#22+!%%/=()$#80#81#82#83#B0" -fixed
-pngout bdpfont.png bdpfont1.png /K1 /Y
-fontbuild2 newfont.bdc bdpfont.png -charset "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789,.-?:_;>*<}{@&#][|\'#22+!%%/=()$#80#81#82#83#B0" -fixed -sort
-pngout bdpfont.png bdpfont2.png /K1 /Y
+fontbuild2 newfont2.bdc bdpfont.png -charset "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789,.-?:_;>*<}{@&#][|\'#22+!%%/=()$#80#81#82#83#B0#84#85" -fixed
+pngout bdpfont.png ..\..\data\bdpfont.png /K1 /Y
