@@ -26,6 +26,10 @@ Todo:
 - Messages are forwarded only to visible controls.
 - Right clicking on ColorSelector in PaletteEditor allows you to pick color from
   the image or from the palette.
+- Added two mouse click icons to the new font. This makes the old font unusable,
+  since it doesn't have these icons.
+- Added mouse click tips to SelectColor and PickColor hints.
+- Right clicking the palette area of the PaletteEditor closes it (as the hint says).
 
 2023.04.04
 - Under the hood: MKMouse2 changes and follow ups.
